create login screen.Login button in ws functional.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,8 +22,9 @@
             </intent-filter>
         </activity>
 
-
-
+        <activity
+            android:name=".LoginScreen"
+            android:exported="false" />
     </application>
 
 </manifest>
