--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,21 +12,26 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PickPal"
         tools:targetApi="31">
+
         <activity
             android:name=".ModeratorModule"
             android:exported="false" />
+
         <activity
             android:name=".WelcomeScreen"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".LoginScreen"
             android:exported="false" />
+
+        <activity android:name=".MainActivity" />
+
     </application>
 
 </manifest>
