--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             android:exported="false" />
 
         <activity
-            android:name=".WelcomeScreen"
+            android:name=".WelcomeActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,7 +27,7 @@
         </activity>
 
         <activity
-            android:name=".LoginScreen"
+            android:name=".LoginActivity"
             android:exported="false" />
 
         <activity android:name=".MainActivity" />
