--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,26 +12,25 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PickPal"
         tools:targetApi="31">
-
+        <activity
+            android:name=".Signup1Activity"
+            android:exported="false" />
         <activity
             android:name=".ModeratorModule"
             android:exported="false" />
-
         <activity
             android:name=".WelcomeActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".LoginActivity"
             android:exported="false" />
-
         <activity android:name=".MainActivity" />
-
     </application>
 
 </manifest>
