--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
             android:name=".LoginActivity"
             android:exported="false" />
         <activity android:name=".MainActivity" />
+        <activity android:name=".CreateSuccess" />
     </application>
 
 </manifest>
