--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,14 +16,15 @@
             android:name=".EditProfile"
             android:exported="false" />
         <activity
-            android:name=".Signup1Activity"
+            android:name=".SignUp1Activity"
             android:exported="false" />
         <activity
             android:name=".SignUp2Activity"
             android:exported="false" />
-
+        <activity
+            android:name=".SignUp3Activity"
+            android:exported="false" />
         <activity android:name=".ModeratorModule" />
-
         <activity
             android:name=".WelcomeActivity"
             android:exported="true">
