--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,18 @@
         android:theme="@style/Theme.PickPal"
         tools:targetApi="31">
         <activity
+            android:name=".PasswordReset"
+            android:exported="false" />
+        <activity
+            android:name=".ForgotPassword3"
+            android:exported="false" />
+        <activity
+            android:name=".ForgotPassword2"
+            android:exported="false" />
+        <activity
+            android:name=".ForgotPassword1"
+            android:exported="false" />
+        <activity
             android:name=".AccountCreated"
             android:exported="false" />
         <activity
