comment recyclerview, mod dashboard view more, club feed post view single post, comment button function

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             android:name=".ViewPostFragment"
             android:exported="false" />
         <activity
-            android:name=".ClubFeed"
+            android:name=".ModeratorModuleViewMore"
             android:exported="false" />
         <activity
             android:name=".PasswordReset"
